@@ -3,6 +3,10 @@ URGENT:
 
 | Profilemanager needs to do a recursive scan of paths.  Use DirTreeWalker?  Adjust SearchPathHandler to use DirTreeWalker.
 
+| Fix signal on custom command change causing whole dialog to refresh!
+
+Fix problemn with Histogram whereby the refresh it triggers can occur after the widget's been replaced with a new one!
+
 Fix segfault if effects are toggled with no image selected.
 (EffectSelector should be disabled in this case anyway, but fix segfault nonetheless.)
 
